--- a/.appGenInfo.json
+++ b/.appGenInfo.json
@@ -5,7 +5,7 @@
     "serviceType": "None",
     "metadataFilename": "",
     "serviceUrl": "N/A",
-    "appName": "mergetest",
+    "appName": "mergeTested",
     "appTitle": "App Title",
     "appDescription": "An SAP Fiori application.",
     "appNamespace": "",
